# Lmapp

./: .gitignore  README.md  eslint.config.js  index.html  latest.json  package-lock.json  package.json
.github/workflows/: release.yml
docs/: PROJECT_IMPROVEMENTS.md  UPDATER_RELEASE.md
scripts/: check-version-sync.mjs  prepare-tauri-release-config.mjs
src/: App.tsx  constants.ts  main.tsx  modelCatalog.ts  styles-lmstudio.css  styles.css  styles.css.backup  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/autogenerated/: add_hf_model.toml  add_model_from_preset.toml  chat_with_model.toml  download_llama_cpp.toml  search_hf_models.toml  set_active_model.toml  start_download_model.toml  start_model_server.toml  stop_model_server.toml  update_runtime_settings.toml
src-tauri/src/: downloads.rs  main.rs  runtime.rs  state.rs  types.rs
src/components/: CatalogModal.tsx  ProfileModal.tsx  SettingsModal.tsx
src/utils/: format.test.ts  format.ts
